syntax = "proto3";

service LeaseManagerService {
    rpc Lease(LeaseRequest) returns (LeaseReply);
    rpc Status_LM(StatusRequest_LM) returns (StatusReply_LM);
}

message LeaseRequest {
    string tmId = 1;
    repeated string keys = 2;
}

message LeaseReply { }

message StatusRequest_LM{

}

message StatusReply_LM{

}